@@ -99,6 +99,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - KLone C++              Mickael Auger
 - LaTeX                  Matthais Pospiech
 - Lisp                   Roberto Rossi
+- Locomotive Basic       Nacho Cabanes
 - LOLcode                Benny Baumann
 - LScript                Beau McGuigan
 - LSL2                   William Fry
